--- a/output/application.json
+++ b/output/application.json
@@ -1,12 +1,12 @@
 {
-  "surname": "Garcia",
-  "first_name": "Maria",
-  "date_of_birth": "15.03.1990",
-  "place_of_birth": "Madrid",
-  "country_of_birth": "Spain",
-  "gender": "Female",
-  "marital_status": "Single",
-  "nationality": "Spain",
+  "maid_surname": "Garcia",
+  "maid_first_name": "Maria",
+  "maid_date_of_birth": "15.03.1990",
+  "maid_place_of_birth": "Madrid",
+  "maid_country_of_birth": "Spain",
+  "maid_gender": "Female",
+  "maid_marital_status": "Single",
+  "maid_nationality": "Spain",
 
   "employer_street": "Calle Mayor",
   "employer_house_number": "25",
