--- a/output/application.json
+++ b/output/application.json
@@ -30,6 +30,7 @@
   "passport_issue_place": "Madrid",
 
   "destination": "Germany",
+  "number_of_entries": "Single entry",
   "visa_start_date": "01.03.2026",
   "visa_end_date": "15.03.2026",
 
